# qr

./: .gitignore  .gitmodules  README.md  meson.build
.github/workflows/: meson.yml
src/: arg.c  arg.h  main.c  output.c  output.h  parse_int.h  qr.c  qr.h  qr_table.c  qr_table.h  stbi_write.c  stbi_write.h  utf8.h  util.c  util.h
src/cli/: arg.c  arg.h  endian.c  endian.h  main.c  output.c  output.h  parse_int.h  stbi_write.c  stbi_write.h
src/libqr/: bit_buffer.c  bit_buffer.h  gf256.c  gf256.h  qr.c  qr.h  qr_render.c  qr_render.h  qr_table.c  qr_table.h  utf8.c  utf8.h  util.c  util.h
src/test/: alignment.c  bit_append.c  bit_append_fail.c  endian.c  format_information.c  gf256.c  qr_encode.c  qr_encode_data.h  qr_mask_penalty.c  test.h  utf8.c  utf8fail.c  version_information.c
src/test/qr_output/: .gitignore  qr_output.c  qr_output.pl  qr_output.sh
test/: bit_append.c  bit_append_fail.c  endian.c  test.h  utf8.c  utf8fail.c
